# ccn-lite

./: .gitignore  .travis.yml  Android.mk  BSDmakefile  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README-Android.md  README-OMNeT.txt  README-localrpc.txt  README.md  README.txt  base64.c  ccn-lite-lnxkernel.c  ccn-lite-minimalrelay.c  ccn-lite-omnet.c  ccn-lite-relay.c  ccn-lite-simu.c  ccnl-const.h  ccnl-core-fwd.c  ccnl-core-util.c  ccnl-core.c  ccnl-core.h  ccnl-debug-mem.c  ccnl-debug.c  ccnl-debug.h  ccnl-defs.h  ccnl-ext-crypto.c  ccnl-ext-debug.c  ccnl-ext-debug.h  ccnl-ext-encaps.c  ccnl-ext-frag.c  ccnl-ext-http.c  ccnl-ext-mgmt.c  ccnl-ext-nfn.c  ccnl-ext-nfn.h  ccnl-ext-nfncommon.c  ccnl-ext-nfnkrivine.c  (+54 more)
src/: Android.mk  CMakeLists.txt  GPATH  GRTAGS  GTAGS  Makefile  Variables.mk  build-test-helper.sh  build-test.mk  build-test.sh  ccn-lite-android.c  ccn-lite-arduino.c  ccn-lite-lnxkernel.c  ccn-lite-minimalrelay.c  ccn-lite-omnet.c  ccn-lite-relay.c  ccn-lite-repo256.c  ccn-lite-rfduino.c  ccn-lite-riot.c  ccn-lite-simu.c  ccnl-core-fwd.c  ccnl-core-fwd.c.orig  ccnl-core-pfx.c  ccnl-core-util.c  ccnl-core.c  ccnl-core.c.orig  ccnl-core.h  ccnl-defs.h  ccnl-ext-crypto.c  ccnl-ext-debug.c  ccnl-ext-debug.h  ccnl-ext-echo.c  ccnl-ext-frag.c  ccnl-ext-hmac.c  ccnl-ext-http.c  ccnl-ext-localrpc.c  ccnl-ext-logging.c  ccnl-ext-logging.c.orig  ccnl-ext-mgmt.c  ccnl-ext-nfn.c  (+31 more)
src/android/: AndroidManifest.xml  README.md  build.xml
src/android/jni/: Android.mk  ccn-lite-android.c  ccn-lite-jni.c
src/arduino/: Makefile  README.md  arduino-headless  src-ethernet.ino  src-wifly.ino
src/arduino/rfduino/: rfduino.ino
src/arduino/src/: src-ethernet.ino  src.ino
src/ccnl-addons/: CMakeLists.txt  Makefile  ccnl-logging.c  ccnl-logging.h
src/ccnl-addons/include/: ccnl-logging.h
src/ccnl-addons/src/: ccnl-logging.c
src/ccnl-android/: build.xml  ccn-lite-android.c  ccn-lite-arduino.c
src/ccnl-android/native/: CMakeLists.txt
src/ccnl-arduino/: ccn-lite-arduino.c
src/ccnl-arduino/rfduino/: rfduino.ino
src/ccnl-core/: CMakeLists.txt  Makefile  ccnl-array.c  ccnl-buf.c  ccnl-buf.h  ccnl-content.c  ccnl-content.h  ccnl-defs.h  ccnl-face.h  ccnl-forward.c  ccnl-forward.h  ccnl-frag.c  ccnl-frag.h  ccnl-if.c  ccnl-if.h  ccnl-interest.c  ccnl-interest.h  ccnl-malloc.h  ccnl-os-time.c  ccnl-pkt-util.c  ccnl-pkt.c  ccnl-pkt.h  ccnl-prefix.c  ccnl-prefix.h  ccnl-relay.c  ccnl-relay.h  ccnl-sched.c  ccnl-sched.h  ccnl-sockunion.c  ccnl-sockunion.h  ccnl-unix.c  ccnl-unix.h
src/ccnl-core/include/: ccnl-array.h  ccnl-buf.h  ccnl-callbacks.h  ccnl-content.h  ccnl-core.h  ccnl-crypto.h  ccnl-defs.h  ccnl-dump.h  ccnl-face.h  ccnl-forward.h  ccnl-frag.h  ccnl-http-status.h  ccnl-if.h  ccnl-interest.h  ccnl-logging.h  ccnl-malloc.h  ccnl-mgmt.h  ccnl-os-time.h  ccnl-pkt-util.h  ccnl-pkt.h  ccnl-prefix.h  ccnl-producer.h  ccnl-relay.h  ccnl-sched.h  ccnl-sockunion.h
src/ccnl-core/src/: ccnl-array.c  ccnl-buf.c  ccnl-callbacks.c  ccnl-content.c  ccnl-crypto.c  ccnl-dump.c  ccnl-face.c  ccnl-forward.c  ccnl-frag.c  ccnl-http-status.c  ccnl-if.c  ccnl-interest.c  ccnl-logging.c  ccnl-malloc.c  ccnl-mgmt.c  ccnl-os-time.c  ccnl-pkt-util.c  ccnl-pkt.c  ccnl-prefix.c  ccnl-producer.c  ccnl-relay.c  ccnl-sched.c  ccnl-sockunion.c
src/ccnl-core/test/: ccnl_core_test_prefix_comp.c  ccnl_core_test_prefix_comp_exact.c  ccnl_core_test_prefix_comp_exact_match.c  ccnl_core_test_prefix_comp_exact_no_match.c  ccnl_core_test_prefix_comp_longest_match.c  (+4 more)
src/ccnl-cs/: CMakeLists.txt
src/ccnl-fwd/: CMakeLists.txt  Makefile  ccnl-dispatch.c  ccnl-dispatch.h  ccnl-fwd.c  ccnl-fwd.h  ccnl-localrpc.c  ccnl-localrpc.h
src/ccnl-lnxkernel/: CMakeLists.txt  CmakeLists.txt  Kbuild.in  ccn-lite-lnxkernel.c
src/ccnl-nfn/: CMakeLists.txt  Makefile
src/ccnl-pkt/: CMakeLists.txt  Makefile  ccnl-pkt-ccnb.c  ccnl-pkt-ccnb.h  ccnl-pkt-ccntlv.c  ccnl-pkt-ccntlv.h  ccnl-pkt-cistlv.c  ccnl-pkt-cistlv.h  ccnl-pkt-iottlv.c  ccnl-pkt-iottlv.h  ccnl-pkt-localrpc.c  ccnl-pkt-localrpc.h  ccnl-pkt-ndntlv.c  ccnl-pkt-ndntlv.h  ccnl-pkt-switch.c  ccnl-pkt-util.c  ccnl-pkt-util.h
src/ccnl-pkt-compression/: CMakeLists.txt
src/ccnl-relay/: CMakeLists.txt  Makefile  ccn-lite-relay  ccn-lite-relay.c  ccn-lite-relay.h
src/ccnl-riot/: CMakeLists.txt
src/ccnl-unix/: CMakeLists.txt  Makefile  ccnl-os-includes.h  ccnl-unix.c  ccnl-unix.h
src/ccnl-utils/: CMakeLists.txt  base64.c  ccn-lite-ccnb2xml.c  ccn-lite-cryptoserver.c  ccn-lite-ctrl.c  ccn-lite-deF.c  ccn-lite-fetch.c  ccn-lite-mkC.c  ccn-lite-mkF.c  ccn-lite-mkI.c  ccn-lite-peek.c  ccn-lite-peekcomputation.c  ccn-lite-pktdump.c  ccn-lite-produce.c  ccn-lite-rpc.c  ccn-lite-simplenfn.c  ccn-lite-valid.c  ccnl-common.c  ccnl-ext-hmac.c  lib-sha256.c
src/doc/: Doxyfile  Doxyfile.in
src/old-ccn-lite-files/: Makefile_BACKUP  ccn-lite-minimalrelay  ccn-lite-minimalrelay.c  ccn-lite-relay  ccn-lite-relay.c  ccn-nfn-relay  ccnl-core.c  ccnl-core.h  ccnl-ext-debug.c  ccnl-ext-nfn.c.orig  ccnl-ext-nfnkrivine.c  ccnl-ext-nfnmonitor.c  ccnl-headers.h  ccnl-pkt-ccnb.c  ccnl-pkt-ccntlv.h  ccnl-pkt-cistlv.c  ccnl-pkt-cistlv.h  ccnl-pkt-iottlv.c  ccnl-pkt-localrpc.c  ccnl-pkt-ndntlv.c  ccnl-simu-client.c
src/omnet/: .cproject  .nedfolders  .oppbuildspec  .project  Makefile.vc
src/py/: README.md  ccn-lite-peek.py  ccn-lite-pktdump.py  ccn-nfn-proxy.py  ccn-nfn-server.py  myNamedFunctions.py
src/rfduino/: Makefile  README.md
src/util/: Makefile  base64.c  ccn-lite-ccnb2xml.c  ccn-lite-cryptoserver.c  ccn-lite-ctrl.c  ccn-lite-deF.c  ccn-lite-fetch.c  ccn-lite-flic.c  ccn-lite-mkC.c  ccn-lite-mkF.c  ccn-lite-mkI.c  ccn-lite-mkM.c  ccn-lite-peek.c  ccn-lite-peekcomputation.c  ccn-lite-pktdump.c  ccn-lite-produce.c  ccn-lite-rpc.c  ccn-lite-simplenfn.c  ccn-lite-valid.c  ccnl-common.c  ccnl-crypto.c  ccnl-socket.c
test/ccnl-core/: CMakeLists.txt  test_content.c  test_interest.c  test_pkt-util.c  test_prefix.c  test_producer.c  test_sockunion.c
test/ccnl-cs/: CMakeLists.txt  test_cs.c  test_cs_helper.c  test_cs_uthash.c  test_cs_wip.c
(+735 files in other folders)
