cmake_minimum_required(VERSION 3.8)
project(ccnl-unix)
 
set(CCNL_DEFINES "-DCCNL_UNIX -DUSE_CCNxDIGEST -DUSE_DUP_CHECK -DUSE_ECHO \
					-DUSE_HMAC256 -DUSE_IPV4 \
					-DUSE_IPV6 -DUSE_MGMT -DUSE_NFN_NSTRANS -DUSE_STATS -DUSE_UNIXSOCKET \
					-DNEEDS_PREFIX_MATCHING -DUSE_LOGGING")

set(CCNL_PACKET_FORMATS "-DUSE_SUITE_CCNB -DUSE_SUITE_CCNTLV -DUSE_SUITE_CISTLV \
						-DUSE_SUITE_IOTTLV -DUSE_SUITE_NDNTLV -DUSE_SUITE_LOCALRPC")

set(CCNL_DISABLED_FLAGS "USE_LINKLAYER USE_DEBUG USE_DEBUG_MALLOC USE_FRAG \
						USE_NACK USE_NFN USE_NFN_MONITOR USE_NFN_KEEPALIVE \
						USE_NFN_PULL USE_SCHEDULER USE_SIGNATURES -DUSE_HTTP_STATUS")

set(CCNLCFLAGS "${CCNL_DEFINES} ${CCNL_PACKET_FORMATS}")
 
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror -std=c99 -g ${CCNLCFLAGS}")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)

include_directories(include ../ccnl-addons/include ../ccnl-pkt/include ../ccnl-fwd/include ../ccnl-core/include)
 
file(GLOB SOURCES "src/*.c")
file(GLOB HEADERS "include/*.h")

add_library(${PROJECT_NAME} STATIC ${SOURCES} ${HEADERS})
